--- a/WebContent/WEB-INF/view/platform/forum/update.html
+++ b/WebContent/WEB-INF/view/platform/forum/update.html
@@ -77,7 +77,7 @@
 					<div class="form-group">
 						<label class="col-sm-2 control-label">图片预览</label>
 						 <div class="col-sm-4">
-							<div id="preview"></div>
+							<div id="preview"><img class="imgg" src="${readImg}" /></div>
 						</div>
 					</div>
 					
