--- a/WebContent/WEB-INF/view/platform/forum/add.html
+++ b/WebContent/WEB-INF/view/platform/forum/add.html
@@ -15,7 +15,7 @@
 		<div class="panel panel-white">
 			
 			<div class="panel-heading">
-				<h4 class="panel-title"><span class="text-bold">信息录入</span></h4>
+				<h4 class="panel-title"><span class="text-bold">轮播图信息录入</span></h4>
 				<div class="panel-tools">										
 					<% include("/common/panel-tools.html"){} %>
 				</div>
