--- a/WebContent/WEB-INF/view/platform/forum/form.html
+++ b/WebContent/WEB-INF/view/platform/forum/form.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="form-group">
-	<label class="col-sm-2 control-label">问题编号</label>
+	<label class="col-sm-2 control-label">问题编号（*问答必填）</label>
 	<div class="col-sm-6">
 		<input type="text" id="tid" name="homeTopPost.tid" value="${escapeXml(homeTopPost.tid!)}" 
 			class="form-control" maxlength="35" >
@@ -33,7 +33,7 @@
 </div>
  	
 <div class="form-group">
-	<label class="col-sm-2 control-label">标题</label>
+	<label class="col-sm-2 control-label">标题（*广告必填）</label>
 	<div class="col-sm-6">
 		<input type="text" id="subject" name="homeTopPost.subject" value="${escapeXml(homeTopPost.subject!)}" 
 			class="form-control" maxlength="80" >
